rscp_communication_v3/rscp_comms/log/build_2025-07-29_16-33-48/rscp_receiver/stderr.log
  File "/home/revel34/rscp_communication_v3/rscp_comms/install/rscp_receiver/lib/python3.10/site-packages/rscp_receiver/receiver.py", line 1
    print(Hello World!)
          ^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

